--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "hubot-rules": "^1.0.0",
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.1",
-    "hubot-slack": "^4.6.0"
+    "hubot-slack": "^4.6.0",
+    "lodash": "^4.17.11"
   },
   "engines": {
     "node": "0.10.x"
