--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "gino",
   "description": "He's just a slime",
   "dependencies": {
+    "forever": "^0.15.3",
     "hubot": "^3.3.1",
     "hubot-diagnostics": "^1.0.0",
     "hubot-google-images": "^0.2.7",
