--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "gino",
   "description": "He's just a slime",
   "dependencies": {
+    "cheerio": "^1.0.0-rc.2",
     "forever": "^0.15.3",
     "hubot": "^3.3.1",
     "hubot-diagnostics": "^1.0.0",
@@ -19,7 +20,9 @@
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.1",
     "hubot-slack": "^4.6.0",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.11",
+    "request": "^2.88.0",
+    "underscore": "^1.9.1"
   },
   "engines": {
     "node": "11.11.x"
